; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ppp_generic.c_ppp_ccp_closed.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ppp_generic.c_ppp_ccp_closed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ppp = type { i32, i32*, %struct.compressor*, i32, i32*, %struct.compressor*, i32 }
%struct.compressor = type { i32, i32 (i8*)*, i32 (i8*)* }

@SC_CCP_OPEN = common dso_local global i32 0, align 4
@SC_CCP_UP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ppp*)* @ppp_ccp_closed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ppp_ccp_closed(%struct.ppp* %0) #0 {
  %2 = alloca %struct.ppp*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.compressor*, align 8
  %6 = alloca %struct.compressor*, align 8
  store %struct.ppp* %0, %struct.ppp** %2, align 8
  %7 = load %struct.ppp*, %struct.ppp** %2, align 8
  %8 = call i32 @ppp_lock(%struct.ppp* %7)
  %9 = load i32, i32* @SC_CCP_OPEN, align 4
  %10 = load i32, i32* @SC_CCP_UP, align 4
  %11 = or i32 %9, %10
  %12 = xor i32 %11, -1
  %13 = load %struct.ppp*, %struct.ppp** %2, align 8
  %14 = getelementptr inbounds %struct.ppp, %struct.ppp* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = and i32 %15, %12
  store i32 %16, i32* %14, align 8
  %17 = load %struct.ppp*, %struct.ppp** %2, align 8
  %18 = getelementptr inbounds %struct.ppp, %struct.ppp* %17, i32 0, i32 6
  store i32 0, i32* %18, align 8
  %19 = load %struct.ppp*, %struct.ppp** %2, align 8
  %20 = getelementptr inbounds %struct.ppp, %struct.ppp* %19, i32 0, i32 5
  %21 = load %struct.compressor*, %struct.compressor** %20, align 8
  store %struct.compressor* %21, %struct.compressor** %5, align 8
  %22 = load %struct.ppp*, %struct.ppp** %2, align 8
  %23 = getelementptr inbounds %struct.ppp, %struct.ppp* %22, i32 0, i32 4
  %24 = load i32*, i32** %23, align 8
  %25 = bitcast i32* %24 to i8*
  store i8* %25, i8** %3, align 8
  %26 = load %struct.ppp*, %struct.ppp** %2, align 8
  %27 = getelementptr inbounds %struct.ppp, %struct.ppp* %26, i32 0, i32 4
  store i32* null, i32** %27, align 8
  %28 = load %struct.ppp*, %struct.ppp** %2, align 8
  %29 = getelementptr inbounds %struct.ppp, %struct.ppp* %28, i32 0, i32 3
  store i32 0, i32* %29, align 8
  %30 = load %struct.ppp*, %struct.ppp** %2, align 8
  %31 = getelementptr inbounds %struct.ppp, %struct.ppp* %30, i32 0, i32 2
  %32 = load %struct.compressor*, %struct.compressor** %31, align 8
  store %struct.compressor* %32, %struct.compressor** %6, align 8
  %33 = load %struct.ppp*, %struct.ppp** %2, align 8
  %34 = getelementptr inbounds %struct.ppp, %struct.ppp* %33, i32 0, i32 1
  %35 = load i32*, i32** %34, align 8
  %36 = bitcast i32* %35 to i8*
  store i8* %36, i8** %4, align 8
  %37 = load %struct.ppp*, %struct.ppp** %2, align 8
  %38 = getelementptr inbounds %struct.ppp, %struct.ppp* %37, i32 0, i32 1
  store i32* null, i32** %38, align 8
  %39 = load %struct.ppp*, %struct.ppp** %2, align 8
  %40 = call i32 @ppp_unlock(%struct.ppp* %39)
  %41 = load i8*, i8** %3, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %43, label %53

43:                                               ; preds = %1
  %44 = load %struct.compressor*, %struct.compressor** %5, align 8
  %45 = getelementptr inbounds %struct.compressor, %struct.compressor* %44, i32 0, i32 2
  %46 = load i32 (i8*)*, i32 (i8*)** %45, align 8
  %47 = load i8*, i8** %3, align 8
  %48 = call i32 %46(i8* %47)
  %49 = load %struct.compressor*, %struct.compressor** %5, align 8
  %50 = getelementptr inbounds %struct.compressor, %struct.compressor* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @module_put(i32 %51)
  br label %53

53:                                               ; preds = %43, %1
  %54 = load i8*, i8** %4, align 8
  %55 = icmp ne i8* %54, null
  br i1 %55, label %56, label %66

56:                                               ; preds = %53
  %57 = load %struct.compressor*, %struct.compressor** %6, align 8
  %58 = getelementptr inbounds %struct.compressor, %struct.compressor* %57, i32 0, i32 1
  %59 = load i32 (i8*)*, i32 (i8*)** %58, align 8
  %60 = load i8*, i8** %4, align 8
  %61 = call i32 %59(i8* %60)
  %62 = load %struct.compressor*, %struct.compressor** %6, align 8
  %63 = getelementptr inbounds %struct.compressor, %struct.compressor* %62, i32 0, i32 0
  %64 = load i32, i32* %63, align 8
  %65 = call i32 @module_put(i32 %64)
  br label %66

66:                                               ; preds = %56, %53
  ret void
}

declare dso_local i32 @ppp_lock(%struct.ppp*) #1

declare dso_local i32 @ppp_unlock(%struct.ppp*) #1

declare dso_local i32 @module_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
